--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title></title>
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet" type="text/css">
-
+		<script src="https://fb.me/react-15.2.1.min.js"></script>
+		<script src="https://fb.me/react-dom-15.2.1.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.10.3/babel.min.js"></script>
 	</head>
 	<body>
 		<div id="app">
