--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 	</head>
 	<body>
 		<div id="app">
+			<script type="text/babel">
+				var Chat = React.createClass({
+					render: function() {
+						return(
+								<div>
+									Hello World
+								</div>
+						)
+					}
+				});
+				ReactDOM.render(<Chat />, document.getElementById('app'));
+			</script>
 		</div>
 	</body>
 </html>
