render initial messages in react

--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
 				var Chat = React.createClass({
 					getInitialState: function() {
 						return {
-							name: "anonymous"
+							name: "anonymous",
+							messages: [{
+                                    name: 'brianmcmichael',
+                                    time: new Date(),
+                                    text: 'hello brian'
+                                },
+                                {
+                                    name: 'lexiapress',
+                                    time: new Date(),
+                                    text: 'hello b'
+                                }
+							]
 						};
 					},
 					setName: function () {
@@ -23,6 +34,19 @@
 						this.setState({name:myName});
 					},
 					render: function() {
+                        var messageList = this.state.messages.map(function(message, i) {
+                            var text = message.text;
+                            return (
+                                    <div key={i} className="message">
+                                        <div className="message">
+                                            <a href={"https://twitter.com/" + message.name + "/"} target="_blank"><img src={"https://twitter.com/" + message.name + "/profile_image"} className="message_profile-pic" /></a>
+                                            <a href={"https://twitter.com/" + message.name + "/"} target="_blank" className="message_username">{message.name}</a>
+                                            <span className="message_timestamp">{message.time.toLocaleString()}</span>
+                                            <span className="message_content" dangerouslySetInnerHTML={{__html: text}}></span>
+                                        </div>
+                                    </div>
+                            )
+                        })
 						return(
 								<div>
 									<div className="header">
@@ -57,19 +81,10 @@
 
 			          </span>
 												</div>
-												<div className="message">
-													<a href="https://twitter.com/codeupstart/" target="_blank"><img src="https://twitter.com/codeupstart/profile_image" className="message_profile-pic" /></a>
-													<a href="https://twitter.com/codeupstart/" target="_blank" className="message_username">codeupstart</a>
-													<span className="message_timestamp">1:31 PM</span>
-													<span className="message_content">Hi there! 😘</span>
-												</div>
+                                                {messageList}
 
-												<div className="message">
-													<a href="https://twitter.com/codeupstart/" target="_blank"><img src="https://twitter.com/codeupstart/profile_image" className="message_profile-pic" /></a>
-													<a href="https://twitter.com/codeupstart/" target="_blank" className="message_username">codeupstart</a>
-													<span className="message_timestamp">1:31 PM</span>
-													<span className="message_content">Welcome to your chat app</span>
-												</div>
+
+
 											</div>
 										</div>
 									</div>
