--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		<script src="https://fb.me/react-15.2.1.min.js"></script>
 		<script src="https://fb.me/react-dom-15.2.1.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.10.3/babel.min.js"></script>
-	</head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    </head>
 	<body>
 		<div id="app">
 			<script type="text/babel">
