--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
 						var myName = window.prompt("Please enter a name", "anonymous");
 						this.setState({name:myName});
 					},
+
+                    sendMessage: function(event) {
+					    var text = event.target.value;
+                        if (event.keyCode == 13 && text !== "") {
+                            var message = {
+                                name: this.state.name,
+                                text: text,
+                                time: new Date()
+                            }
+
+                            this.setState({messages: this.state.messages.concat(message)})
+                            $('#msg-input').val('');
+                        }
+                    },
+
 					render: function() {
                         var messageList = this.state.messages.map(function(message, i) {
                             var text = message.text;
@@ -90,7 +105,19 @@
 											</div>
 										</div>
 									</div>
-								</div>
+                                    <div className="footer">
+                                        <div className="user-menu">
+                                            <p className="disclaimer">This demo is not created by, affiliated with, or supported by Slack Technologies, Inc.</p>
+                                        </div>
+                                    <div className="input-box">
+                                        <input id="msg-input" type="text" className="input-box_text" onKeyDown={this.sendMessage}/>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+
 						)
 					}
 				});
