--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 							]
 						};
 					},
+
+                    componentDidUpdate: function() {
+					    $("#message-list").scrollTop($("#message-list")[0].scrollHeight);
+                    },
+
 					setName: function () {
 						var myName = window.prompt("Please enter a name", "anonymous");
 						this.setState({name:myName});
